--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="./img/icon.png">
     <title>Calculator</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script type="text/javascript" src="main.js"></script>
